--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/luxon": "^3.7.1",
     "@types/node": "^22.18.3",
     "@types/nodemailer": "^7.0.1",
+    "@types/react": "^19.2.2",
     "eslint": "^9.35.0",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.1.1",
@@ -59,10 +60,14 @@
     "@adonisjs/limiter": "^2.4.0",
     "@adonisjs/lucid": "^21.8.0",
     "@adonisjs/static": "^1.1.1",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
     "@vinejs/vine": "^3.0.1",
     "luxon": "^3.7.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
+    "react": "^19.2.0",
+    "react-email": "^4.3.2",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
