--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "luxon": "^3.7.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
+    "raw-body": "^3.0.2",
     "react": "^19.2.0",
     "react-email": "^4.3.2",
     "reflect-metadata": "^0.2.2",
